--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@
 footer {
   font-weight: 300;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   padding: 2rem;
   background: var(--main-gray);
   border-top: 5px solid var(--main-red);
@@ -286,10 +286,4 @@ footer {
 footer > p {
   margin: 2rem;
 }
-
-@media (max-width: 28.75em) {
-  footer {
-    flex-direction: column;
-    text-align: center;
-  }
 }
